Add ComboBox to contact form

--- a/index.html
+++ b/index.html
@@ -745,8 +745,8 @@
                                 <div class="selected-product">
                                     <select name="selectedversion">
                                     	<option value="mala_firma">EFFIT GDPR Pro malou firmu</option>
-																			<option value="stredni_firma">EFFIT GDPR Pro střední firmu</option>
-																			<option value="velka_firma">EFFIT GDPR Pro velkou firmu</option>
+										<option value="stredni_firma">EFFIT GDPR Pro střední firmu</option>
+										<option value="velka_firma">EFFIT GDPR Pro velkou firmu</option>
                                     </select>
                                 </div>
                                 <span class="price">18 499 Kč / rok</span>
@@ -831,6 +831,15 @@
 
                                 <label for="tel">Telefon</label>
                                 <input type="text" name="tel">
+
+                                <label for="selectedversion">Zajímám se o:</label>
+                                <div class="selected-product">
+                                    <select name="selectedversion">
+                                    	<option value="mala_firma">EFFIT GDPR Pro malou firmu</option>
+										<option value="stredni_firma">EFFIT GDPR Pro střední firmu</option>
+										<option value="velka_firma">EFFIT GDPR Pro velkou firmu</option>
+                                    </select>
+                                </div>
 
                                 <label for="message">Vaše zpráva</label>
                                 <input type="text" name="message">
