Suspend order wizzard

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           </ul>
           <ul class="navbar-nav">
               <li class="nav-item">
-                <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--red" data-toggle="modal" data-target="#buyModal">
+                <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--red" data-toggle="modal" data-target="#contactus">
                     <i class="fa fa-shopping-cart"></i> Zakoupit EFFIT gdpr
                 </button>
               </li>
@@ -64,7 +64,7 @@
             <p>
                 Pomůže se zavedením a údržbou nařízení GDPR od začátku až dokonce. Obsahuje bázi typizovaných řešení pro Vás a metodiku ověřenou z desítek GDPR projektů. Seznamte se s ním níže!
             </p>
-            <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--red" data-toggle="modal" data-target="#buyModal">
+            <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--red" data-toggle="modal" data-target="#contactus">
                 <i class="fa fa-shopping-cart"></i> Zakoupit EFFIT gdpr
             </button>
             <br>
@@ -146,7 +146,7 @@
                         </p>
                         <p class="price-text">CENA OD</p>
                         <p class="product-price green">9 499 Kč <span class="with-dph">s DPH</span></p>
-                        <button onclick="setupBuyForm('mala_firma')" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--green" data-toggle="modal" data-target="#buyModal">
+                        <button onclick="setupBuyForm('mala_firma')" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--green" data-toggle="modal" data-target="#contactus">
                             <i class="fa fa-shopping-cart"></i> Zakoupit
                         </button>
                     </div>
@@ -163,7 +163,7 @@
                         </p>
                         <p class="price-text">CENA OD</p>
                         <p class="product-price blue">18 499 Kč <span class="with-dph">s DPH</span></p>
-                        <button onclick="setupBuyForm('stredni_firma')" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--blue" data-toggle="modal" data-target="#buyModal">
+                        <button onclick="setupBuyForm('stredni_firma')" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--blue" data-toggle="modal" data-target="#contactus">
                             <i class="fa fa-shopping-cart"></i> Zakoupit
                         </button>
                     </div>
@@ -180,7 +180,7 @@
                         </p>
                         <p class="price-text">CENA OD</p>
                         <p class="product-price purple">37 499 Kč <span class="with-dph">s DPH</span></p>
-                        <button onclick="setupBuyForm('velka_firma')" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--purple" data-toggle="modal" data-target="#buyModal">
+                        <button onclick="setupBuyForm('velka_firma')" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--purple" data-toggle="modal" data-target="#contactus">
                             <i class="fa fa-shopping-cart"></i> Zakoupit
                         </button>
                     </div>
@@ -628,7 +628,7 @@
                     </div>
 
 
-                <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--red" data-toggle="modal" data-target="#buyModal">
+                <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--red" data-toggle="modal" data-target="#contactus">
                     PŘEJÍT K OBJEDNÁVCE
                 </button>
 
@@ -693,7 +693,7 @@
                     <span class="heading">Užitečné odkazy</span>
                     <ul>
                         <li><a href="https://www.bluepartners.cz/">Blue Partners</a></li>
-                        <li><a href="#" data-toggle="modal" data-target="#buyModal">Zakoupit Effit</a></li>
+                        <li><a href="#" data-toggle="modal" data-target="#contactus">Zakoupit Effit</a></li>
                     </ul>
                 </div>
             </div>
