Not everybody using contactform must ask for a product

--- a/index.html
+++ b/index.html
@@ -835,9 +835,10 @@
                                 <label for="selectedversion">Zajímám se o:</label>
                                 <div class="selected-product">
                                     <select name="selectedversion">
+																			<option value="just_contact">Nezajímám se o žádný produkt</option>
                                     	<option value="mala_firma">EFFIT GDPR Pro malou firmu</option>
-										<option value="stredni_firma">EFFIT GDPR Pro střední firmu</option>
-										<option value="velka_firma">EFFIT GDPR Pro velkou firmu</option>
+																			<option value="stredni_firma">EFFIT GDPR Pro střední firmu</option>
+																			<option value="velka_firma">EFFIT GDPR Pro velkou firmu</option>
                                     </select>
                                 </div>
 
