--- a/index.html
+++ b/index.html
@@ -845,7 +845,7 @@
                                 <label for="message">Vaše zpráva</label>
                                 <input type="text" name="message">
 																<input type="hidden" name="systemmessage" value="Vzkaz z kontaktního formuláře">
-																<input type="hidden" name="company" value="Nebyla zadána">
+																<input type="hidden" name="company" value="">
 
                                 <div class="conditions">
                                     <input type="checkbox" name="conditions">
