Setup contact form somehow everytime
Also note that this is order when abusing contact form in that way

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           </ul>
           <ul class="navbar-nav">
               <li class="nav-item">
-                <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--red" data-toggle="modal" data-target="#contactus">
+                <button onclick="setupBuyForm('stredni_firma')" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--red" data-toggle="modal" data-target="#contactus">
                     <i class="fa fa-shopping-cart"></i> Zakoupit EFFIT gdpr
                 </button>
               </li>
@@ -64,7 +64,7 @@
             <p>
                 Pomůže se zavedením a údržbou nařízení GDPR od začátku až dokonce. Obsahuje bázi typizovaných řešení pro Vás a metodiku ověřenou z desítek GDPR projektů. Seznamte se s ním níže!
             </p>
-            <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--red" data-toggle="modal" data-target="#contactus">
+            <button onclick="setupBuyForm('stredni_firma')" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--red" data-toggle="modal" data-target="#contactus">
                 <i class="fa fa-shopping-cart"></i> Zakoupit EFFIT gdpr
             </button>
             <br>
@@ -246,7 +246,7 @@
                             <li>Data napříč různými oblastmi</li>
                         </ul>
 
-                        <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect" data-toggle="modal" data-target="#contactus">
+                        <button onclick="setupBuyForm('just_contact')" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect" data-toggle="modal" data-target="#contactus">
                             PORAĎTE SE S NÁMI
                         </button>
                     </div>
@@ -628,7 +628,7 @@
                     </div>
 
 
-                <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--red" data-toggle="modal" data-target="#contactus">
+                <button onclick="setupBuyForm('stredni_firma')" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--red" data-toggle="modal" data-target="#contactus">
                     PŘEJÍT K OBJEDNÁVCE
                 </button>
 
@@ -645,7 +645,7 @@
             <p>
                 Máte-li jakýkoli dotaz, potřebujete konzultaci nebo si jednoduše nejste jisti, určitě se ozvěte na naši podporu. Náš tým Vám rád zodpoaví jakékoli dotazi ohledně systému Effit a hlouběji přiblíží jeho schopnosti.
             </p>
-            <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect contact-button" data-toggle="modal" data-target="#contactus">
+            <button onclick="setupBuyForm('just_contact')" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect contact-button" data-toggle="modal" data-target="#contactus">
                 Kontaktovat
             </button>
         </div>
@@ -666,7 +666,7 @@
                         <li>Zajistíme Vám roli DPO</li>
                     </ul>
 
-                    <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect contact-us-button" data-toggle="modal" data-target="#contactus">
+                    <button onclick="setupBuyForm('just_contact')" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect contact-us-button" data-toggle="modal" data-target="#contactus">
                         NAPIŠTE NÁM
                     </button>
                 </div>
@@ -693,7 +693,7 @@
                     <span class="heading">Užitečné odkazy</span>
                     <ul>
                         <li><a href="https://www.bluepartners.cz/">Blue Partners</a></li>
-                        <li><a href="#" data-toggle="modal" data-target="#contactus">Zakoupit Effit</a></li>
+                        <li><a onclick="setupBuyForm('stredni_firma')" href="#" data-toggle="modal" data-target="#contactus">Zakoupit Effit</a></li>
                     </ul>
                 </div>
             </div>
