--- a/index.html
+++ b/index.html
@@ -856,7 +856,7 @@
                                    Na uvedené adrese Vás budeme kontaktovat nejpozději do dvou pracovních dnů.
                                 </p>
 
-                                <button id="sendmessagebutton" type="button" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button-turquoise">
+                                <button id="sendmessagebutton" type="submit" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button-turquoise">
                                     <i class="material-icons">send</i> Odeslat zprávu
                                 </button>
                             </div>
