--- a/index.html
+++ b/index.html
@@ -827,10 +827,10 @@
                                 <input type="text" name="name">
 
                                 <label for="enail">Email</label>
-                                <input type="text" name="email">
+                                <input type="email" name="email">
 
                                 <label for="tel">Telefon</label>
-                                <input type="text" name="tel">
+                                <input type="tel" name="tel">
 
                                 <label for="selectedversion">Zajímám se o:</label>
                                 <div class="selected-product">
