--- a/index.html
+++ b/index.html
@@ -824,10 +824,10 @@
                         <form id="contactform">
                             <div class="form-group">
                                 <label for="name">Jméno a Příjmení</label>
-                                <input type="text" name="name">
+                                <input required type="text" name="name">
 
                                 <label for="enail">Email</label>
-                                <input type="email" name="email">
+                                <input required type="email" name="email">
 
                                 <label for="tel">Telefon</label>
                                 <input type="tel" name="tel">
@@ -848,7 +848,7 @@
 																<input type="hidden" name="company" value="">
 
                                 <div class="conditions">
-                                    <input type="checkbox" name="conditions">
+                                    <input required type="checkbox" name="conditions">
                                     <label for="conditions">Souhlasím se <a href="#">zpracováním osobních údajů</a></label>
                                 </div>
 
