--- a/index.html
+++ b/index.html
@@ -835,17 +835,17 @@
                                 <label for="selectedversion">Zajímám se o:</label>
                                 <div class="selected-product">
                                     <select name="selectedversion">
-																			<option value="just_contact">Nezajímám se o žádný produkt</option>
+										<option value="just_contact">Jiné</option>
                                     	<option value="mala_firma">EFFIT GDPR Pro malou firmu</option>
-																			<option value="stredni_firma">EFFIT GDPR Pro střední firmu</option>
-																			<option value="velka_firma">EFFIT GDPR Pro velkou firmu</option>
+										<option value="stredni_firma">EFFIT GDPR Pro střední firmu</option>
+										<option value="velka_firma">EFFIT GDPR Pro velkou firmu</option>
                                     </select>
                                 </div>
 
                                 <label for="message">Vaše zpráva</label>
                                 <input type="text" name="message">
-																<input type="hidden" name="systemmessage" value="Vzkaz z kontaktního formuláře">
-																<input type="hidden" name="company" value="Žádná">
+								<input type="hidden" name="systemmessage" value="Vzkaz z kontaktního formuláře">
+								<input type="hidden" name="company" value="Žádná">
 
                                 <div class="conditions">
                                     <input required type="checkbox" name="conditions">
