relate images in functions into galleries.

--- a/index.html
+++ b/index.html
@@ -282,17 +282,17 @@
                         <div class="images">
                             <div class="row">
                                 <div class="col-md-4">
-                                    <a href="assets/img/Functions/diz_1.png" data-toggle="lightbox">
+                                    <a href="assets/img/Functions/diz_1.png" data-gallery="vedeni" data-toggle="lightbox">
                                         <img class="img-fluid" src="assets/img/Functions/diz_1.png">
                                     </a>
                                 </div>
                                 <div class="col-md-4">
-                                    <a href="assets/img/Functions/diz_2.png" data-toggle="lightbox">
+                                    <a href="assets/img/Functions/diz_2.png" data-gallery="vedeni" data-toggle="lightbox">
                                         <img class="img-fluid" src="assets/img/Functions/diz_2.png">
                                     </a>
                                 </div>
                                 <div class="col-md-4">
-                                    <a href="assets/img/Functions/diz_3.png" data-toggle="lightbox">
+                                    <a href="assets/img/Functions/diz_3.png" data-gallery="vedeni" data-toggle="lightbox">
                                         <img class="img-fluid" src="assets/img/Functions/diz_3.png">
                                     </a>
                                 </div>
@@ -321,17 +321,17 @@
                         <div class="images">
                             <div class="row">
                                 <div class="col-md-4">
-                                    <a href="assets/img/Functions/systemy1.png" data-toggle="lightbox">
+                                    <a href="assets/img/Functions/systemy1.png" data-gallery="evidence" data-toggle="lightbox">
                                         <img class="img-fluid" src="assets/img/Functions/systemy1.png">
                                     </a>
                                 </div>
                                 <div class="col-md-4">
-                                    <a href="assets/img/Functions/systemy2.png" data-toggle="lightbox">
+                                    <a href="assets/img/Functions/systemy2.png" data-gallery="evidence" data-toggle="lightbox">
                                         <img class="img-fluid" src="assets/img/Functions/systemy2.png">
                                     </a>
                                 </div>
                                 <div class="col-md-4">
-                                    <a href="assets/img/Functions/systemy3.png" data-toggle="lightbox">
+                                    <a href="assets/img/Functions/systemy3.png" data-gallery="evidence" data-toggle="lightbox">
                                         <img class="img-fluid" src="assets/img/Functions/systemy3.png">
                                     </a>
                                 </div>
@@ -564,12 +564,12 @@
                             <div class="images">
                                 <div class="row">
                                     <div class="col-md-4">
-                                        <a href="assets/img/Functions/odpovedi1.png" data-toggle="lightbox">
+                                        <a href="assets/img/Functions/odpovedi1.png" data-gallery="podpora" data-toggle="lightbox">
                                             <img class="img-fluid" src="assets/img/Functions/odpovedi1.png">
                                         </a>
                                     </div>
                                     <div class="col-md-4">
-                                        <a href="assets/img/Functions/odpovedi2.png" data-toggle="lightbox">
+                                        <a href="assets/img/Functions/odpovedi2.png" data-gallery="podpora" data-toggle="lightbox">
                                             <img class="img-fluid" src="assets/img/Functions/odpovedi2.png">
                                         </a>
                                     </div>
