make thumbnails and fix lightbox chevron color.

--- a/index.html
+++ b/index.html
@@ -282,18 +282,18 @@
                         <div class="images">
                             <div class="row">
                                 <div class="col-md-4">
-                                    <a href="assets/img/Functions/diz_1.png" data-gallery="vedeni" data-toggle="lightbox">
-                                        <img class="img-fluid" src="assets/img/Functions/diz_1.png">
+                                    <a href="assets/img/Functions/diz_1.png" data-gallery="BigGallery" data-toggle="lightbox">
+                                        <img class="img-fluid" src="assets/img/Functions/Thumb/diz_1.png">
                                     </a>
                                 </div>
                                 <div class="col-md-4">
-                                    <a href="assets/img/Functions/diz_2.png" data-gallery="vedeni" data-toggle="lightbox">
-                                        <img class="img-fluid" src="assets/img/Functions/diz_2.png">
+                                    <a href="assets/img/Functions/diz_2.png" data-gallery="BigGallery" data-toggle="lightbox">
+                                        <img class="img-fluid" src="assets/img/Functions/Thumb/diz_2.png">
                                     </a>
                                 </div>
                                 <div class="col-md-4">
-                                    <a href="assets/img/Functions/diz_3.png" data-gallery="vedeni" data-toggle="lightbox">
-                                        <img class="img-fluid" src="assets/img/Functions/diz_3.png">
+                                    <a href="assets/img/Functions/diz_3.png" data-gallery="BigGallery" data-toggle="lightbox">
+                                        <img class="img-fluid" src="assets/img/Functions/Thumb/diz_3.png">
                                     </a>
                                 </div>
                             </div>
@@ -321,18 +321,18 @@
                         <div class="images">
                             <div class="row">
                                 <div class="col-md-4">
-                                    <a href="assets/img/Functions/systemy1.png" data-gallery="evidence" data-toggle="lightbox">
-                                        <img class="img-fluid" src="assets/img/Functions/systemy1.png">
+                                    <a href="assets/img/Functions/systemy1.png" data-gallery="BigGallery" data-toggle="lightbox">
+                                        <img class="img-fluid" src="assets/img/Functions/Thumb/systemy1.png">
                                     </a>
                                 </div>
                                 <div class="col-md-4">
-                                    <a href="assets/img/Functions/systemy2.png" data-gallery="evidence" data-toggle="lightbox">
-                                        <img class="img-fluid" src="assets/img/Functions/systemy2.png">
+                                    <a href="assets/img/Functions/systemy2.png" data-gallery="eBigGallery" data-toggle="lightbox">
+                                        <img class="img-fluid" src="assets/img/Functions/Thumb/systemy2.png">
                                     </a>
                                 </div>
                                 <div class="col-md-4">
-                                    <a href="assets/img/Functions/systemy3.png" data-gallery="evidence" data-toggle="lightbox">
-                                        <img class="img-fluid" src="assets/img/Functions/systemy3.png">
+                                    <a href="assets/img/Functions/systemy3.png" data-gallery="BigGallery" data-toggle="lightbox">
+                                        <img class="img-fluid" src="assets/img/Functions/Thumb/systemy3.png">
                                     </a>
                                 </div>
                             </div>
@@ -360,8 +360,8 @@
                         <div class="images">
                             <div class="row">
                                 <div class="col-md-4">
-                                    <a href="assets/img/Functions/uloziste1.png" data-toggle="lightbox">
-                                        <img class="img-fluid" src="assets/img/Functions/uloziste1.png">
+                                    <a href="assets/img/Functions/uloziste1.png" data-gallery="BigGallery" data-toggle="lightbox">
+                                        <img class="img-fluid" src="assets/img/Functions/Thumb/uloziste1.png">
                                     </a>
                                 </div>
                             </div>
@@ -389,8 +389,8 @@
                         <div class="images">
                             <div class="row">
                                 <div class="col-md-4">
-                                    <a href="assets/img/Functions/uzly1.png" data-toggle="lightbox">
-                                        <img class="img-fluid" src="assets/img/Functions/uzly1.png">
+                                    <a href="assets/img/Functions/uzly1.png" data-gallery="BigGallery" data-toggle="lightbox">
+                                        <img class="img-fluid" src="assets/img/Functions/Thumb/uzly1.png">
                                     </a>
                                 </div>
                             </div>
@@ -418,8 +418,8 @@
                         <div class="images">
                             <div class="row">
                                 <div class="col-md-4">
-                                    <a href="assets/img/Functions/organizace1.png" data-toggle="lightbox">
-                                        <img class="img-fluid" src="assets/img/Functions/organizace1.png">
+                                    <a href="assets/img/Functions/organizace1.png" data-gallery="BigGallery" data-toggle="lightbox">
+                                        <img class="img-fluid" src="assets/img/Functions/Thumb/organizace1.png">
                                     </a>
                                 </div>
                             </div>
@@ -447,8 +447,8 @@
                         <div class="images">
                             <div class="row">
                                 <div class="col-md-4">
-                                    <a href="assets/img/Functions/ucely1.png" data-toggle="lightbox">
-                                        <img class="img-fluid" src="assets/img/Functions/ucely1.png">
+                                    <a href="assets/img/Functions/ucely1.png" data-gallery="BigGallery" data-toggle="lightbox">
+                                        <img class="img-fluid" src="assets/img/Functions/Thumb/ucely1.png">
                                     </a>
                                 </div>
                             </div>
@@ -476,8 +476,8 @@
                         <div class="images">
                             <div class="row">
                                 <div class="col-md-4">
-                                    <a href="assets/img/Functions/reporty1.png" data-toggle="lightbox">
-                                        <img class="img-fluid" src="assets/img/Functions/reporty1.png">
+                                    <a href="assets/img/Functions/reporty1.png" data-gallery="BigGallery" data-toggle="lightbox">
+                                        <img class="img-fluid" src="assets/img/Functions/Thumb/reporty1.png">
                                     </a>
                                 </div>
                             </div>
@@ -535,8 +535,8 @@
                         <div class="images">
                             <div class="row">
                                 <div class="col-md-4">
-                                    <a href="assets/img/Functions/soulad1.png" data-toggle="lightbox">
-                                        <img class="img-fluid" src="assets/img/Functions/soulad1.png">
+                                    <a href="assets/img/Functions/soulad1.png" data-gallery="BigGallery" data-toggle="lightbox">
+                                        <img class="img-fluid" src="assets/img/Functions/Thumb/soulad1.png">
                                     </a>
                                 </div>
                             </div>
@@ -564,13 +564,13 @@
                             <div class="images">
                                 <div class="row">
                                     <div class="col-md-4">
-                                        <a href="assets/img/Functions/odpovedi1.png" data-gallery="podpora" data-toggle="lightbox">
-                                            <img class="img-fluid" src="assets/img/Functions/odpovedi1.png">
+                                        <a href="assets/img/Functions/odpovedi1.png" data-gallery="BigGallery" data-toggle="lightbox">
+                                            <img class="img-fluid" src="assets/img/Functions/Thumb/odpovedi1.png">
                                         </a>
                                     </div>
                                     <div class="col-md-4">
-                                        <a href="assets/img/Functions/odpovedi2.png" data-gallery="podpora" data-toggle="lightbox">
-                                            <img class="img-fluid" src="assets/img/Functions/odpovedi2.png">
+                                        <a href="assets/img/Functions/odpovedi2.png" data-gallery="BigGallery" data-toggle="lightbox">
+                                            <img class="img-fluid" src="assets/img/Functions/Thumb/odpovedi2.png">
                                         </a>
                                     </div>
                                 </div>
